--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="/src/assets/css/timetable.css" />
+    <link rel="icon" href="/favicon.ico">
     <title>Vite App</title>
   </head>
   <body>
